# trusty-ai-sandbox

./: .gitignore  README.md  TrustyAI POC instructions.md  tfifdf_RF_original.ipynb
.github/workflows/: trustyCI.yml
binder/: requirements-dev.txt  requirements.txt
counterfactual-op/: README.md  pom.xml
end2endPoC/: README.md  docker-compose.yml  rf.rds  run-compose.sh  setup.sh
end2endPoC-integrationTests/: README.md  pom.xml
end2endPoC/data-generator/: README.md  generator.py  server.py  test_server.py
end2endPoC/demo-payloads/: README.md  create-fraud-model-request.json  create-model.sh
end2endPoC/explainability-lib/: .gitignore  README.md  pom.xml
end2endPoC/explanation-service/: Dockerfile  (+1 more)
explanation-service/: README.md  pom.xml
front-end-poc/: .gitignore  .prettierrc  README.md  package-lock.json  package.json  pom.xml
front-end-poc-pmml-linear-model-viewer/: .gitignore  README.md  gulpfile.js  package.json  tsconfig.json
my-trusty-scorecard/: Dockerfile  README.md  pom.xml
pmml-notebook/: data_generator.py  dtree_risk_predictor.pmml  input_data.csv  notebook.ipynb  requirements.txt
pmml_recommendation/: README.md  cluster_buyer_predictor.pmml  databuilder.py  input_data.csv  notebook.ipynb  postBuild  requirements.txt
python-trustyai/: README.md  requirements-dev.txt  setup.cfg  setup.py
python-trustyai/tests/: common.py  test_counterfactualexplainer.py  test_limeexplainer.py
stackoverflow_explainabilty/: Data_creation.ipynb  Explainabilty_RF.ipynb  contractions.json  tfifdf_RF.ipynb  tfifdf_RF_original.ipynb  word2vec_NN.ipynb
(+766 files in other folders)
