[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = trustyai
version = 0.0.1
license = Apache 2.0
description = Python bindings to TrustyAI
author = Rui Vieira
author_email = rui@redhat.com

[options]
packages = find:
include_package_data = False
requires = ['Jpype1']
python_requires = >=3.8